--- a/homework-4.html
+++ b/homework-4.html
@@ -1882,39 +1882,32 @@ log_fit</code></pre>
 <p>Finally, with your fitted model, use <code>predict()</code>, <code>bind_cols()</code>, and <code>accuracy()</code> to assess your model’s performance on the testing data!</p>
 <p>Compare your model’s testing accuracy to its average accuracy across folds. Describe what you see.</p>
 <p>log_reg accuracy is bigger than lda and qda.</p>
-<pre class="r"><code>bound_train_data = bind_cols(predict(log_fit, new_data = titanic_train, type = &quot;class&quot;),
-                             predict(lda_fit, new_data = titanic_train, type = &quot;class&quot;),
-                             predict(qda_fit, new_data = titanic_train, type = &quot;class&quot;))
+<pre class="r"><code>bound_train_data = bind_cols(predict(log_fit, new_data = titanic_train, type = &quot;class&quot;))
                              
-
-colnames(bound_train_data) = c(&quot;Log fit&quot;, &quot;LDA fit&quot;, &quot;QDA fit&quot;, &quot;True&quot;)
-
-log_reg_acc &lt;- augment(log_fit, new_data = titanic_train) %&gt;%
+predict(log_fit, new_data = titanic_test, type = &quot;prob&quot;)</code></pre>
+<pre><code>## # A tibble: 268 × 2
+##    .pred_Yes .pred_No
+##        &lt;dbl&gt;    &lt;dbl&gt;
+##  1     0.877    0.123
+##  2     0.240    0.760
+##  3     0.511    0.489
+##  4     0.250    0.750
+##  5     0.116    0.884
+##  6     0.382    0.618
+##  7     0.340    0.660
+##  8     0.572    0.428
+##  9     0.714    0.286
+## 10     0.796    0.204
+## # … with 258 more rows</code></pre>
+<pre class="r"><code>log_reg_acc &lt;- augment(log_fit, new_data = titanic_train) %&gt;%
   accuracy(truth = survived, estimate = .pred_class)
 
-
-lda_acc &lt;- augment(lda_fit, new_data = titanic_train) %&gt;%
-  accuracy(truth = survived, estimate = .pred_class)
-
-
-qda_acc &lt;- augment(qda_fit, new_data = titanic_train) %&gt;%
-  accuracy(truth = survived, estimate = .pred_class)
 
 log_reg_acc</code></pre>
 <pre><code>## # A tibble: 1 × 3
 ##   .metric  .estimator .estimate
 ##   &lt;chr&gt;    &lt;chr&gt;          &lt;dbl&gt;
 ## 1 accuracy binary         0.807</code></pre>
-<pre class="r"><code>lda_acc</code></pre>
-<pre><code>## # A tibble: 1 × 3
-##   .metric  .estimator .estimate
-##   &lt;chr&gt;    &lt;chr&gt;          &lt;dbl&gt;
-## 1 accuracy binary         0.793</code></pre>
-<pre class="r"><code>qda_acc</code></pre>
-<pre><code>## # A tibble: 1 × 3
-##   .metric  .estimator .estimate
-##   &lt;chr&gt;    &lt;chr&gt;          &lt;dbl&gt;
-## 1 accuracy binary         0.796</code></pre>
 </div>
 
 
